--- a/GC2025/HoraPratica1/index.html
+++ b/GC2025/HoraPratica1/index.html
@@ -11,10 +11,10 @@
         <h1></h1>
     </header>
     <main class="container">
-        <button onclick="alertClick()" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
-        <button onclick="" class="button">Soma</button>
+        <button onclick="buttonClick()" class="button">Console</button>
+        <button onclick="alertClick()" class="button">Alert</button>
+        <button onclick="verificarClick()" class="button">Prompt</button>
+        <button onclick="somaClick()" class="button">Soma</button>
     </main>
 
       <script src="app.js"></script>
