--- a/GC2025/ProjetoBase/index.html
+++ b/GC2025/ProjetoBase/index.html
@@ -28,7 +28,7 @@
                     <button onclick="" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
                 </div>
             </div>
-            <img src="./img/ia.png" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
+            <img src="./Caldeira.png" alt="Uma pessoa olhando para a esquerda" class="Caldeira" />
         </div>
     </div>
 
