--- a/GC2025/LogicaDeProgramacao2/CarrinhoDeCompras/index.html
+++ b/GC2025/LogicaDeProgramacao2/CarrinhoDeCompras/index.html
@@ -65,6 +65,7 @@
 
       <p class="carrinho__total">
         Total: <span class="texto-azul" id="valor-total">R$1400</span>
+        <p id="teste"> Teste</p>
       </p>
     </section>
   </main>
